2004-05-31  Elliott Hughes  <enh@acm.org>

	* src/definite.cpp, src/double.cpp, src/set.h: fix operator=
	implementations missing self-assignment checks (found while
	investigating bug 3973).

2004-05-20  Elliott Hughes  <enh@acm.org>

	* src/bytecode.cpp: Bug 3974 - don't assume that a string literal
	has type java.lang.String; it may have been cast to java.lang.Object
	or one of String's implemented interfaces in valid (if strange) code.

2004-05-17  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp: Bug 3972 - don't assume that a constant is an int
	literal just because it's not one of the other literals we were
	expecting; check explicitly. Invalid source may mean that we're
	actually looking at a string constant, say.

2004-05-16  Chris Abbey  <jikes@cabbey.net>

	Release 1.21

2004-05-13  Chris Abbey  <jikes@cabbey.net>

	* configure.ac: bump version
	* configure: regen

	
2004-05-04  Chris Abbey  <jikes@cabbey.net>

	* src/m4/ac_check_iconv.m4: enable --without-iconv
	* aclocal.m4:
	* config.guess:
	* config.sub:
	* configure:
	* depcomp
	* install-sh
	* Makefile.in
	* src/Makefile.in
	* doc/Makefile.in: regen

2004-05-04  Chris Abbey  <jikes@cabbey.net>

	* autogen.sh: made more user friendly

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/init.cpp: fix bug #3948 by ignoring fields of array types
	when looking for final fields that could be made static.

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/class.cpp, src/error.cpp: ensures we also print the path to
	the class file within the JAR file (i.e. include the package) in
	diagnostics about invalid class files.

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/class.h: fixes compilation with libgcj3.3.jar; gcj-compiled
	classes have an extra attribute "gnu.gcj.gcj-compiled". A fencepost
	error in GetN was causing us to reject the class file. (Also fixes
	the analogous error in SkipN.)

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/class.h, src/class.cpp: Always call MarkInvalid rather than